include(cloud_preprocessingTaskLib)

ADD_LIBRARY(${CLOUD_PREPROCESSING_TASKLIB_NAME} SHARED
    ${CLOUD_PREPROCESSING_TASKLIB_SOURCES})
add_dependencies(${CLOUD_PREPROCESSING_TASKLIB_NAME}
    regen-typekit)

TARGET_LINK_LIBRARIES(${CLOUD_PREPROCESSING_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${QT_LIBRARIES}
    ${CLOUD_PREPROCESSING_TASKLIB_DEPENDENT_LIBRARIES})
SET_TARGET_PROPERTIES(${CLOUD_PREPROCESSING_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${CLOUD_PREPROCESSING_TASKLIB_INTERFACE_LIBRARIES}")
SET_TARGET_PROPERTIES(${CLOUD_PREPROCESSING_TASKLIB_NAME}
    PROPERTIES INTERFACE_LINK_LIBRARIES "${CLOUD_PREPROCESSING_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${CLOUD_PREPROCESSING_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${CLOUD_PREPROCESSING_TASKLIB_HEADERS}
    DESTINATION include/orocos/cloud_preprocessing)

