include(orbiter_preprocessingTaskLib)

ADD_LIBRARY(${ORBITER_PREPROCESSING_TASKLIB_NAME} SHARED
    ${ORBITER_PREPROCESSING_TASKLIB_SOURCES})
add_dependencies(${ORBITER_PREPROCESSING_TASKLIB_NAME}
    regen-typekit)

TARGET_LINK_LIBRARIES(${ORBITER_PREPROCESSING_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${QT_LIBRARIES}
    ${ORBITER_PREPROCESSING_TASKLIB_DEPENDENT_LIBRARIES})
SET_TARGET_PROPERTIES(${ORBITER_PREPROCESSING_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${ORBITER_PREPROCESSING_TASKLIB_INTERFACE_LIBRARIES}")
SET_TARGET_PROPERTIES(${ORBITER_PREPROCESSING_TASKLIB_NAME}
    PROPERTIES INTERFACE_LINK_LIBRARIES "${ORBITER_PREPROCESSING_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${ORBITER_PREPROCESSING_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${ORBITER_PREPROCESSING_TASKLIB_HEADERS}
    DESTINATION include/orocos/orbiter_preprocessing)

